# tandemapp

./: .env  AGENTS.md  CONTEXT.md  Concepto.md  DESIGN.md  INFORME DE DEBUGGING MCP TANDEM.md  PRODUCT.md  README.md  compose.yml  package.json  pnpm-lock.yaml  skills-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_families_members_rls.py  0002_children_rls.py  0003_mcp_tokens_rls.py  0004_resolve_mcp_tokens_function.py  0005_avatar_color.py  0006_event_types_rls.py  0006_pautas_rls.py  0006_shopping_items_rls.py  0007_event_types_rls.py  0007_measurements_rls.py  0007_pautas_rls.py  0007_sizes_rls.py  0007a_sizes_rls.py  0008_health_visits_rls.py  0008_measurements_rls.py  0009_health_visits_rls.py  0010_administrations_rls.py  0010_events_rls.py  0010_shopping_buy_undo.py  (+9 more)
backend/app/: auth.py  config.py  current_values.py  database.py  main.py  models.py  pautas_service.py  poller.py  push_service.py  tenancy.py  tokens.py
backend/tests/: conftest.py  test_administrations.py  test_child_access_seam.py  test_child_matching.py  test_children.py  test_current_values_module.py  test_event_types.py  test_events.py  test_health_visits.py  test_identity.py  test_invitations.py  test_isolation.py  test_mcp_add_shopping_items.py  test_mcp_auth.py  test_mcp_dates_module.py  test_mcp_health.py  test_mcp_server.py  test_mcp_tokens.py  test_mcp_tool_seam.py  test_measurements.py  test_pauta_member.py  test_pautas.py  test_pautas_service.py  test_poller.py  test_poller_events.py  test_push.py  test_series.py  test_shopping_items.py  test_sizes.py  test_tenancy_seam.py  test_today.py
(+281 files in other folders)
