[project]
name = "backend"
version = "0.1.0"
description = "Backend de Tándem (API REST + servidor MCP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.136.3",
    "fastmcp>=3.4.2",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "testcontainers[postgres]>=4.14.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Un solo event loop por sesión: el pool de conexiones asyncpg (cacheado en el
# engine) se reutiliza entre tests sin cruzar loops.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: usar Depends()/Query() en defaults es el patrón idiomático de FastAPI.
ignore = ["B008"]
